# cassiwary-gb

./: '  .gitignore  07.txt  3  Cargo.toml  README.md  TODO  \  ]  cassowary  configure.sh  memory.hex
site/: index.js  package-lock.json
src/: bytes.rs  console.rs  cpu.rs  instructionset.rs  lib.rs  main.rs
src/console/: apu.rs  cpu.rs  interrupts.rs  joypad.rs  memory.rs  ppu.rs  regids.rs  timer.rs
src/console/cpu/: identifiers.rs  instruction.rs
test/: main.c  main.gb
tests/: cpu_test.rs  instruction_test.rs  misc_test.rs
