[package]
name = "cassowary-gb"
version = "0.1.0"
edition = "2021"
authors = ["Nikola Zupancic"]
description = "Gameboy emulator that compiles to wasm"
license = "MIT/Apaches-2.0"
repository = "https://github.com/c-ola/cassowary-gb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
#crate-type = ["cdylib"]

[dependencies]
sdl2 = "0.35.2"
#wasm-bindgen = "0.2.86"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[features]
#default = ["console_error_panic_hook"]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
#console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
#wasm-bindgen-test = "0.3.13"

# Tell `rustc` to optimize for small code size.
#opt-level = "s"
