[package]
name = "cassowary-gb"
version = "0.1.0"
edition = "2021"
authors = ["Nikola Zupancic"]
license = "MIT/Apaches-2.0"
repository = "https://github.com/c-ola/cassowary-gb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"
sdl2 = "0.35.2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
